完成部分监测功能